The log file says (in part): Before reporting bugs in pre-release versions please check the latest version in the X.Org "monolithic tree" CVS repository hosted at http://www.freedesktop.org/Software/xorg/ That url just gives you a "create this page" page. If you remove the trailing slash, then it would make more sense, but it would still be two or three clicks away from the actual tree (depending on how you count). It would be better just to use the URL http://cvs.freedesktop.org/xorg/ or, perhaps better yet, http://cvs.freedesktop.org/xorg/xc/
Good point - will fix. (Will also fix it not to tell people to look for the Xorg monolith when building the modular.)
Fixed in CVS HEAD - thanks for pointing this out: CVSROOT: /cvs/xorg Module name: xc Changes by: alanc@gabe.freedesktop.org 05/11/05 10:56:50 Log message: 2005-11-05 Alan Coopersmith <alan.coopersmith@sun.com> * programs/Xserver/hw/xfree86/common/xf86Init.c: Bug #4948: <https://bugs.freedesktop.org/show_bug.cgi?id=4948> Incorrect URL in log file for Xorg CVS. Also fixed wording of statement to not refer to monolithic CVS since modular uses the same code, so it was appearing in modular builds too. Modified files: ./: ChangeLog xc/programs/Xserver/hw/xfree86/common/: xf86Init.c Revision Changes Path 1.1489 +8 -0 xc/ChangeLog http://cvs.freedesktop.org/xorg/xc/ChangeLog 1.27 +3 -3 xc/programs/Xserver/hw/xfree86/common/xf86Init.c http://cvs.freedesktop.org/xorg/xc/programs/Xserver/hw/xfree86/common/xf86Init.c
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.