Bug #4948: <https://bugs.freedesktop.org/show_bug.cgi?id=4948> Incorrect     URL in log file for Xorg CVS. Also fixed wording of statement to not     refer to monolithic CVS since modular uses the same code, so it was     appearing in modular builds too.